<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_experiments"
            android:icon="@drawable/experiments"
            android:title="@string/nav_text_configurations" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/nav_text_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/nav_text_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/nav_text_about" />
    </group>

</menu>
