<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_connect"
        android:icon="@drawable/bluetooth_connect"
        android:title="@string/action_connect"
        android:titleCondensed="@string/action_connect"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_main_sort"
        android:icon="@drawable/sort"
        android:title="@string/action_sort_by"
        android:titleCondensed="@string/action_sort_by"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_main_import"
        android:icon="@drawable/import_configuration"
        android:title="@string/action_import"
        android:titleCondensed="@string/action_import"
        app:showAsAction="never" />

</menu>
