<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="cz.zcu.fav.remotestimulatorcontrol.model.configuration.AConfiguration" />

        <import type="cz.zcu.fav.remotestimulatorcontrol.model.configuration.erp.ConfigurationERP" />

        <import type="cz.zcu.fav.remotestimulatorcontrol.model.configuration.erp.ConfigurationERP.Output" />

        <variable
            name="controller"
            type="cz.zcu.fav.remotestimulatorcontrol.ui.configurations.detail.erp.OutputFragment" />

        <variable
            name="configuration"
            type="ConfigurationERP" />

        <variable
            name="output"
            type="Output" />
    </data>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text='@{@string/parameter_output(output.id)}' />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/parameter_puls" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:baselineAligned="false">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:errorText="@{@string/error_invalid_input}"
                        app:validity="@{output.validityFlag}"
                        app:validityFlag="@{Output.FLAG_PULS_UP}">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:hint="@string/parameter_puls_up"
                            android:inputType="numberSigned"
                            android:text='@={"" + output.pulsUp}' />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:errorText="@{@string/error_invalid_input}"
                        app:validity="@{output.validityFlag}"
                        app:validityFlag="@{Output.FLAG_PULS_DOWN}">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:hint="@string/parameter_puls_down"
                            android:inputType="numberSigned"
                            android:text='@={"" + output.pulsDown}' />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/parameter_distribution" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">

                    <cz.zcu.fav.remotestimulatorcontrol.widget.editableseekbar.EditableSeekBar
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:esbMax="@{configuration.maxDistributionValue}"
                        app:esbMin="@{AConfiguration.MIN_PERCENT}"
                        app:esbTitle="@string/parameter_distribution_value"
                        app:esbValue="@{output.distributionValue}"
                        app:onProgressChanged="@{controller.distributionValueChanged}"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:errorText="@{@string/error_invalid_input}"
                        app:validity="@{output.validityFlag}"
                        app:validityFlag="@{Output.FLAG_DISTRIBUTION_DELAY}">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:hint="@string/parameter_distribution_delay"
                            android:inputType="numberSigned"
                            android:text='@={"" + output.distributionDelay}' />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <cz.zcu.fav.remotestimulatorcontrol.widget.editableseekbar.EditableSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:esbMax="@{AConfiguration.MAX_BRIGHTNESS}"
                    app:esbMin="@{AConfiguration.MIN_BRIGHTNESS}"
                    app:esbTitle="@string/parameter_brightness"
                    app:esbValue="@{output.brightness}"
                    app:onProgressChanged="@{controller.brightnessChanged}"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.design.widget.CoordinatorLayout>
</layout>