<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="cz.zcu.fav.remotestimulatorcontrol.ui.stimulator.StimulatorControlActivity" />
        <import type="android.databinding.ObservableBoolean" />

        <variable
            name="controller"
            type="StimulatorControlActivity" />

        <variable
            name="loaded"
            type="ObservableBoolean" />

        <variable
            name="running"
            type="ObservableBoolean" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/stimulatorControlContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="cz.zcu.fav.remotestimulatorcontrol.ui.stimulator.StimulatorControlActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stimulation_start"
            android:onClick="onStimulationStart"
            android:enabled="@{loaded &amp;&amp; !running }"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stimulaton_stop"
            android:onClick="onStimulationStop"
            android:enabled="@{loaded &amp;&amp; running}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_configuration"
            android:onClick="onStimulatorUploadConfig"
            android:enabled="@{loaded &amp;&amp; !running}"/>

    </LinearLayout>
</layout>