<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="cz.zcu.fav.remotestimulatorcontrol.ui.configurations.detail.cvep.ConfigurationFragmentCVEP" />

        <import type="cz.zcu.fav.remotestimulatorcontrol.model.configuration.AConfiguration" />

        <import type="cz.zcu.fav.remotestimulatorcontrol.model.configuration.cvep.ConfigurationCVEP" />

        <import type="cz.zcu.fav.remotestimulatorcontrol.model.configuration.cvep.ConfigurationCVEP.Pattern" />

        <variable
            name="controller"
            type="ConfigurationFragmentCVEP" />

        <variable
            name="configuration"
            type="ConfigurationCVEP" />

        <variable
            name="pattern"
            type="Pattern" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <cz.zcu.fav.remotestimulatorcontrol.widget.editableseekbar.EditableSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:esbMax="@{ConfigurationCVEP.MAX_BIT_SHIFT}"
                    app:esbMin="@{ConfigurationCVEP.MIN_BIT_SHIFT}"
                    app:esbTitle="@string/parameter_bit_shift"
                    app:esbValue="@{configuration.bitShift}"
                    app:onProgressChanged="@{controller.bitShiftChanged}"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@{@string/parameter_puls_length}"
                    app:errorText="@{@string/error_invalid_input}"
                    app:validity="@{configuration.validityFlag}"
                    app:validityFlag="@{ConfigurationCVEP.FLAG_PULS_LENGTH}">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberSigned"
                        android:text='@={configuration.pulsLength}' />
                </android.support.design.widget.TextInputLayout>

                <cz.zcu.fav.remotestimulatorcontrol.widget.editableseekbar.EditableSeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:esbMax="@{AConfiguration.MAX_BRIGHTNESS}"
                    app:esbMin="@{AConfiguration.MIN_BRIGHTNESS}"
                    app:esbTitle="@string/parameter_brightness"
                    app:esbValue="@{configuration.brightness}"
                    app:onProgressChanged="@{controller.brightnessChanged}"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/parameter_pattern_32_bit" />

                <cz.zcu.fav.remotestimulatorcontrol.widget.patternlayout.PatternWidget
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:alignContent="flex_start"
                    app:alignItems="center"
                    app:bit_count='@{"" + ConfigurationCVEP.PATTERN_LENGTH}'
                    app:flexDirection="row"
                    app:flexWrap="wrap"
                    app:justifyContent="flex_start"
                    app:onBitChange="@{controller.patternValueChange}"
                    app:value="@{pattern.value}" />

                <android.support.v7.widget.ButtonBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clear"
                        android:onClick="@{() -> controller.clearBitPattern()}"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/toggle"
                        android:onClick="@{() -> controller.toggleBitPattern()}"/>

                </android.support.v7.widget.ButtonBarLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</layout>